Refactor: group files into feature-based folders

--- a/Encrypt.csproj
+++ b/Encrypt.csproj
@@ -65,7 +65,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="CreateKey.xaml">
+	  <MauiXaml Update="CreateKeyPage\CreateKey.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
